prevent scrollbar from repositioning web page

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -76,3 +76,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+html {
+  overflow-y: scroll;
+}
